Fix table and add description for posting and commenting operation

--- a/report/main.tex
+++ b/report/main.tex
@@ -200,8 +200,9 @@ TOTALE         &           & 9       &      \\ \hline
 \end{table}
 \subsection{Postare e commentare} \label{postare}
 \paragraph{Descrizione}
+Aggiunge una nuova riga alla tabella CONTENUTO.
 \paragraph{Frequenza} 10 / g
-\begin{table}[t]
+\begin{table}[H]
 \paragraph{Tavola degli accessi\newline}
 \begin{tabular}{|c|c|c|c|}
 \hline
